# low-cost-and-low-latency-orderbook-dbengine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: CMakeLists.txt  README.md  bench_engine.cpp
docs/: architecture.md  c-api.md  cli.md  python.md  query-language.md  roadmap.md  storage.md
include/orderbook/: aggregation.hpp  c_api.h  client.hpp  codec.hpp  columnar_store.hpp  command_parser.hpp  compression.hpp  coordinator.hpp  crc32c.hpp  data_model.hpp  engine.hpp  epoch.hpp  failover.hpp  io_uring_server.hpp  logger.hpp  metrics.hpp  metrics_server.hpp  mmap_store.hpp  query_engine.hpp  replication.hpp  response_formatter.hpp  session.hpp  shard_coordinator.hpp  shard_map.hpp  shard_router.hpp  soa_buffer.hpp  tcp_server.hpp  types.hpp  wal.hpp
python/: benchmark.py  example.py  stress_test.py
python/orderbook_engine/: __init__.py
src/: README.md  aggregation.cpp  c_api.cpp  client.cpp  codec.cpp  columnar_store.cpp  command_parser.cpp  compression.cpp  coordinator.cpp  engine.cpp  epoch.cpp  failover.cpp  io_uring_server.cpp  logger.cpp  metrics.cpp  metrics_server.cpp  mmap_store.cpp  query_engine.cpp  replication.cpp  response_formatter.cpp  session.cpp  shard_coordinator.cpp  shard_map.cpp  shard_router.cpp  soa_buffer.cpp  tcp_server.cpp  wal.cpp
tests/: CMakeLists.txt  test_aggregation.cpp  test_batch_insert.cpp  test_c_api.cpp  test_cli_failover.cpp  test_client.cpp  test_codec.cpp  test_columnar_store.cpp  test_compression.cpp  test_engine.cpp  test_epoch.cpp  test_etcd_integration.cpp  test_failover_election.cpp  test_failover_integration.cpp  test_failover_roles.cpp  test_incremental_flush.cpp  test_io_uring.cpp  test_metrics_registry.cpp  test_metrics_server.cpp  test_mmap_store.cpp  test_query_engine.cpp  test_replication.cpp  test_replication_compress.cpp  test_session_compress.cpp  test_shard_coordinator.cpp  test_shard_map.cpp  test_shard_router.cpp  test_soa_buffer.cpp  test_stress.cpp  test_structured_logger.cpp  test_tcp_server.cpp  test_ttl_retention.cpp  test_types_and_data_model.cpp  test_wal.cpp  test_wire_protocol_epoch.cpp
tests/integration/: README.md  conftest.py  ob_integration_test.cpp  pytest.ini
tools/: ob_cli.cpp  ob_tcp_server.cpp
